# openai-agents-session

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml  docs.yml  release.yml
docs/: index.md
docs/api/: dynamodb.md  index.md  redis.md
docs/backends/: dynamodb.md  redis.md
docs/examples/: index.md  integration-testing.md
docs/getting-started/: installation.md  quickstart.md
docs/stylesheets/: extra.css
examples/: README.md  docker-compose.yml  test_dynamodb_session.py  test_redis_session.py  test_with_agent.py
src/openai_agents_session/: __init__.py  dynamodb.py  redis.py
tests/: __init__.py  conftest.py  test_dynamodb.py  test_redis.py
